Fix download button on landing page on narrow screens.

--- a/styles/style.css
+++ b/styles/style.css
@@ -223,6 +223,12 @@
         padding: 5px 10px;
     }
 
+    @media only screen and (max-width: 1000px) {
+        .landing-page-download-button {
+            right: 2%;
+        }
+    }
+
     .landing-page-download-icon {
         height: 3.5em;
         margin-right: 1em;
